Home Page finish

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lucky App</title>
+    <title>Estimate App</title>
+    <!-- Boxicons CSS -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
