--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg"
-    />
+    <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estimate App</title>
     <!-- Boxicons CSS -->
